kubernetes/apps/mikrodash/mikrodash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikrodash
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mikrodash
  template:
    metadata:
      labels:
        app: mikrodash
    spec:
      containers:
      - name: mikrodash
        image: ghcr.io/secops-7/mikrodash:latest
        ports:
        - containerPort: 3081
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mikrodash-data
---
apiVersion: v1
kind: Service
metadata:
  name: mikrodash
  namespace: apps
spec:
  ports:
  - port: 3081
  selector:
    app: mikrodash
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikrodash-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia@kubernetescrd
spec:
  rules:
  - host: mikrodash.woitzik.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mikrodash
            port:
              number: 3081
